[workspace]
members = [
	"prpr",
	"prpr-avc",
	"prpr-pbc",
	"phira",
	"phira-main",
	"phira-monitor",
]
resolver = "2"

[workspace.package]
version = "0.6.7"
edition = "2021"
license = "GPL-3.0-only"

[workspace.dependencies]
tokio = "=1.36.0"

[profile.release]
opt-level = 2
strip = true

[profile.dev.package."*"]
opt-level = 2
