[workspace]
members = [
	"prpr",
	"prpr-avc",
	"prpr-pbc",
	"prpr-l10n",
	"phira",
	"phira-main",
	"phira-monitor",
]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(closed)'] }

[workspace.package]
version = "0.6.7"
edition = "2021"
license = "GPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
base64 = "0.22.1"
bitflags = "2.10.0"
chrono = "0.4.43"
fluent = "0.17.0"
fluent-syntax = "0.12.0"
futures-util = "0.3.31"
hex = "0.4.3"
image = { version = "0.25.9", default-features = false }
lru = "0.16.3"
lyon = "1.0.16"
nalgebra = "0.34.1"
once_cell = "1.21.3"
pollster = "0.4.0"
rand = "0.8.5"
regex = "1.12.2"
reqwest = { version = "0.13.1", default-features = false }
serde = "1.0.228"
serde_json = "1.0.49"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sys-locale = "0.3.2"
tempfile = "3.24.0"
tokio = "1.38.2"
tracing = "0.1.44"
uuid = "1.20.0"
walkdir = "2.5.0"
zip = { version = "7.2.0", default-features = false }

macroquad = { git = "https://github.com/Mivik/prpr-macroquad", rev = "c2d2e71", default-features = false }
miniquad = { git = "https://github.com/Mivik/prpr-miniquad", rev = "3a3a121" }
phira = { path = "phira", default-features = false }
phira-mp-client = { git = "https://github.com/TeamFlos/phira-mp", rev = "6967475" }
phira-mp-common = { git = "https://github.com/TeamFlos/phira-mp", rev = "6967475" }
prpr = { path = "prpr", default-features = false }
prpr-avc = { path = "prpr-avc" }
prpr-l10n = { path = "prpr-l10n" }
sasa = { git = "https://github.com/Mivik/sasa", rev = "63d019c", default-features = false }

[profile.release]
opt-level = 2
strip = true

[profile.dev.package."*"]
opt-level = 2
