[workspace]
members = [
	"prpr",
	"prpr-avc",
	"prpr-pbc",
	"prpr-l10n",
	"phira",
	"phira-main",
	"phira-monitor",
]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(closed)'] }

[workspace.package]
version = "0.7.1"
edition = "2021"
license = "GPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
base64 = "0.22.1"
bitflags = "2.11.0"
chrono = "0.4.44"
fluent = "0.17.0"
fluent-syntax = "0.12.0"
futures-util = "0.3.32"
hex = "0.4.3"
image = { version = "0.25.10", default-features = false }
inputbox = "0.1.1"
lru = "0.16.3"
lyon = "1.0.19"
nalgebra = "0.34.1"
once_cell = "1.21.4"
pollster = "0.4.0"
rand = "0.8.5"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false }
rfd = "0.17.2"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sys-locale = "0.3.2"
tempfile = "3.27.0"
tokio = "1.50.0"
tracing = "0.1.44"
uuid = "1.22.0"
walkdir = "2.5.0"
zip = { version = "8.3.0", default-features = false }

objc2 = "0.6.4"
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
objc2-ui-kit = "0.3.2"
objc2-uniform-type-identifiers = "0.3.2"

macroquad = { git = "https://github.com/Mivik/prpr-macroquad", rev = "b2eab29", default-features = false }
miniquad = { git = "https://github.com/Mivik/prpr-miniquad", rev = "0c525a3" }
phira = { path = "phira", default-features = false }
phira-mp-client = { git = "https://github.com/TeamFlos/phira-mp", rev = "6967475" }
phira-mp-common = { git = "https://github.com/TeamFlos/phira-mp", rev = "6967475" }
prpr = { path = "prpr", default-features = false }
prpr-avc = { path = "prpr-avc" }
prpr-l10n = { path = "prpr-l10n" }
sasa = { git = "https://github.com/Mivik/sasa", rev = "e76229b", default-features = false }

[profile.release]
opt-level = 2
strip = true

[profile.dev.package."*"]
opt-level = 2
