[package]
name = "phira-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
chrono = "0.4.26"
futures-util = "0.3.28"
log = "0.4.19"
macroquad = { git = "https://github.com/Mivik/prpr-macroquad", default-features = false }
pretty_env_logger = "0.5.0"
reqwest = { version = "*", features = ["json", "stream"] }
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
tokio = { workspace = true }
uuid = { version = "1.4.0", features = ["v4"] }

phira-mp-client = { git = "https://github.com/TeamFlos/phira-mp" }
phira-mp-common = { git = "https://github.com/TeamFlos/phira-mp" }
prpr = { path = "../prpr" }
serde_json = "1.0.99"
