[package]
name = "phira-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
log = "0.4.29"
macroquad = { workspace = true, default-features = false }
pretty_env_logger = "0.5.0"
reqwest = { workspace = true, default-features = false, features = [
    "json",
    "stream",
    "gzip",
    "charset",
    "http2",
    "system-proxy",
    "rustls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

phira-mp-client = { workspace = true }
phira-mp-common = { workspace = true }
prpr = { workspace = true }
