[package]
name = "phira"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]

[features]
closed = ["prpr/closed"]
video = ["prpr/video"]
chat = []
aa = []
event_debug = []

[dependencies]
anyhow = { workspace = true }
arc-swap = "1.8.1"
async-trait = { workspace = true }
base64 = { workspace = true }
bitflags = { workspace = true }
bytes = "1.11.0"
bytesize = "2.3.1"
cacache = { version = "13.1.0", default-features = false, features = [
    "tokio-runtime",
] }
chrono = { workspace = true, features = ["serde"] }
futures-util = { workspace = true }
hex = { workspace = true }
image = { workspace = true, default-features = false, features = [
    "bmp",
    "gif",
    "jpeg",
    "png",
    "rayon",
    "webp",
] }
logos = "0.16.1"
lru = { workspace = true }
lyon = { workspace = true }
macroquad = { workspace = true, default-features = false }
nalgebra = { workspace = true }
once_cell = { workspace = true }
pollster = { workspace = true }
prpr = { workspace = true, features = ["log"], default-features = false }
prpr-l10n = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
    "json",
    "stream",
    "gzip",
    "charset",
    "http2",
    "system-proxy",
    "rustls",
    "query",
] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
smallvec = "1.15.1"
tap = "1.0.1"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
walkdir = { workspace = true }
zip = { workspace = true }
zstd = "0.13"

phira-mp-client = { workspace = true }
phira-mp-common = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.2"
ndk-context = "0.1"
sasa = { workspace = true, default-features = false, features = ["oboe"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
sasa = { workspace = true, default-features = true }

[target.'cfg(target_os = "ios")'.dependencies]
objc = "*"
objc-foundation = "*"

[build-dependencies]
dotenv-build = "0.1"

[dev-dependencies]
fluent = { workspace = true }
fluent-syntax = { workspace = true }
