[package]
name = "prpr"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[features]
default = ["log", "video"]
closed = []
video = ["dep:prpr-avc"]
log = ["dep:tracing-subscriber", "dep:colored"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22.1"
cfg-if = "1.0.0"
chardetng = "0.1.17"
concat-string = "1.0.1"
csv = "1.1.6"
fastblur = "0.1.1"
fluent = "0.16.0"
fluent-syntax = "0.11.0"
glyph_brush = "0.7.5"
image = "0.24.0"
intl-memoizer = "0.5.1"
lru = "0.9.0"
lyon = "1.0.1"
macroquad = { git = "https://github.com/Mivik/prpr-macroquad", default-features = false }
miniquad = { git = "https://github.com/Mivik/prpr-miniquad" }
nalgebra = "*"
once_cell = "1.16.0"
ordered-float = "3.4.0"
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8.5"
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
symphonia = { version = "0.5", features = [
	"flac",
	"mp3",
	"ogg",
	"vorbis",
	"wav",
	"pcm",
] }
sys-locale = "0.3.1"
tempfile = "3.3.0"
tracing = "0.1.37"
unic-langid = { version = "0.9.1", features = ["macros"] }
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }

byteorder = "1.4.3"
chrono = { version = "0.4.24", features = ["serde"] }
hex = "0.4.3"
hmac = "0.12.1"
miniz_oxide = "0.7.1"
obfstr = "0.4.3"
sha2 = "0.10.6"
subtle = "2.4.1"
libc = "0.2.142"
bitflags = { version = "2.2.1", features = ["serde"] }
color-thief = "0.2.2"

tracing-subscriber = { version = "0.3.17", optional = true }
colored = { version = "=2.0.0", optional = true }

prpr-avc = { path = "../prpr-avc", optional = true }

ahash = "=0.8.6"
cfg-expr = "=0.15.4"
system-deps = "=6.1.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
rfd = "=0.10.0"
open = "5.0.0"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "*"
objc-foundation = "0.1.1"
objc_id = "*"
block = "0.1.6"

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.2"
ndk-context = "0.1"
sasa = { git = "https://github.com/Mivik/sasa", default-features = false, features = [
	"oboe",
] }

[target.'cfg(not(target_os = "android"))'.dependencies]
sasa = { git = "https://github.com/Mivik/sasa" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true }
web-sys = { version = "0.3", features = [
	"Location",
	"Performance",
	"UrlSearchParams",
	"Window",
] }
js-sys = "*"
wasm-bindgen = "*"
wasm-bindgen-futures = "0.4"

[build-dependencies]
walkdir = "2.3.2"
