[package]
name = "prpr-auto-offset-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
prpr = { workspace = true }
prpr-auto-offset = { workspace = true }
prpr-avc = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
